--- a/src/common/Header.css
+++ b/src/common/Header.css
@@ -1,10 +1,10 @@
-.header {
+.app-header {
   background-color: #263238;
-  margin: 0;
-  padding: 0;
-  height: 40px;
-  display: flex;
-  align-items: center;
+  height: 50px;
+  line-height: 50px;
+  color: #fff;
+  font-size: 18px;
+  text-align: left;
 }
 
 .logoTitle {
