--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -13,3 +13,19 @@
   display: flex;
   flex-direction: row;
 }
+
+.divider {
+  margin-top: 10px !important;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
+.post-caption {
+  overflow: hidden;
+  text-overflow: clip;
+  margin-top: 5px;
+}
+
+.post-tags {
+  color: #4dabf5;
+}
