Code refactoring and commenting - Added comments wherever required - Improved UX - Made search case insensitive on Home component

--- a/src/common/Common.css
+++ b/src/common/Common.css
@@ -2,3 +2,13 @@
   margin-top: 100px;
   width: 100%;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.comments {
+  padding-top: 10px;
+}
