--- a/src/screens/profile/Profile.css
+++ b/src/screens/profile/Profile.css
@@ -31,3 +31,75 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
 }
+
+.media-modal {
+  align-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.media-modal-container {
+  display: flex;
+  flex-direction: row;
+  background-color: #fff;
+  width: 70%;
+  height: 70%;
+}
+
+.media-modal-image {
+  width: 50%;
+  padding: 10px;
+  overflow: hidden;
+}
+
+.media-modal-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.media-modal-content {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  padding: 10px;
+}
+
+.media-modal-avatar-area {
+  border-bottom: 2px solid #f2f2f2;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.media-modal-avatar {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+}
+
+.media-modal-details {
+  display: flex;
+  height: 100%;
+  overflow-y: auto;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.post-caption {
+  padding-top: 10px;
+}
+
+.like-bottom {
+  padding-top: 20px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.modal-footer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
